# cv_chat

./: README.md  cv.txt  main.py  pyproject.toml
