[tool.poetry]
name = "cv-chat"
version = "0.1.0"
description = ""
authors = ["MadsLang <madslangs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.31.0"
openai = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
